--- a/.github/workflows/pages.yml
+++ b/.github/workflows/pages.yml
@@ -21,6 +21,7 @@ jobs:
       - name: Deploy 🚀
         uses: s0/git-publish-subdir-action@develop
         env:
+          REPO: self
           BRANCH: pages
           FOLDER: dist
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
