--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,7 +4,7 @@ services:
   traefik:
     image: traefik:2.6
     restart: always
-    command: 
+    command:
       - --providers.docker
       - --api.insecure
     networks:
@@ -14,42 +14,14 @@ services:
           - app.mealaway.test
           - api.mealaway.test
     ports:
-      - "80:80"
-      - "8080:8080"
+      - '80:80'
+      - '8080:8080'
     security_opt:
       - no-new-privileges=true
     volumes:
       - ./devstack/traefik:/etc/traefik:ro
       - ./devstack/certificates:/etc/certs:ro
       - /var/run/docker.sock:/var/run/docker.sock:ro
-
-  dashboard:
-    stop_grace_period: '1s'
-    image: node:16-buster
-    working_dir: /app
-    command:
-      - sh
-      - -c
-      - |
-        npm ci
-        npm run dev
-    networks:
-      archi:
-        aliases:
-          - dashboard.archi.test
-    labels:
-      - "traefik.enable=true"
-      - "traefik.http.routers.dashboard.tls=false"
-      - "traefik.http.routers.dashboard.rule=Host(`app.archi.test`)"
-      - "traefik.http.routers.dashboard.entrypoints=http"
-      - "traefik.http.routers.dashboard.service=dashboard"
-      - "traefik.http.services.dashboard.loadbalancer.server.port=5173"
-      - "traefik.docker.network=archi"
-    volumes:
-      - ./dashboard:/app
-      - ./devstack/certificates:/etc/certs:ro
-    environment:
-      VITE_API_URL: http://api.archi.test/
 
   app:
     stop_grace_period: '1s'
@@ -66,13 +38,13 @@ services:
         aliases:
           - app.mealaway.test
     labels:
-      - "traefik.enable=true"
-      - "traefik.http.routers.app.tls=false"
-      - "traefik.http.routers.app.rule=Host(`app.mealaway.test`)"
-      - "traefik.http.routers.app.entrypoints=http"
-      - "traefik.http.routers.app.service=app"
-      - "traefik.http.services.app.loadbalancer.server.port=5173"
-      - "traefik.docker.network=mealaway"
+      - 'traefik.enable=true'
+      - 'traefik.http.routers.app.tls=false'
+      - 'traefik.http.routers.app.rule=Host(`app.mealaway.test`)'
+      - 'traefik.http.routers.app.entrypoints=http'
+      - 'traefik.http.routers.app.service=app'
+      - 'traefik.http.services.app.loadbalancer.server.port=5173'
+      - 'traefik.docker.network=mealaway'
     volumes:
       - ./app:/app
       - ./devstack/certificates:/etc/certs:ro
@@ -94,13 +66,13 @@ services:
         aliases:
           - api.mealaway.test
     labels:
-      - "traefik.enable=true"
-      - "traefik.http.routers.api.tls=false"
-      - "traefik.http.routers.api.rule=Host(`api.mealaway.test`)"
-      - "traefik.http.routers.api.entrypoints=http"
-      - "traefik.http.routers.api.service=api"
-      - "traefik.http.services.api.loadbalancer.server.port=3333"
-      - "traefik.docker.network=mealaway"
+      - 'traefik.enable=true'
+      - 'traefik.http.routers.api.tls=false'
+      - 'traefik.http.routers.api.rule=Host(`api.mealaway.test`)'
+      - 'traefik.http.routers.api.entrypoints=http'
+      - 'traefik.http.routers.api.service=api'
+      - 'traefik.http.services.api.loadbalancer.server.port=3333'
+      - 'traefik.docker.network=mealaway'
     volumes:
       - ./api:/app
     environment:
@@ -121,13 +93,13 @@ services:
       ROOT_DOMAIN: mealaway.test
       QUEUE_REDIS_HOST: redis
       QUEUE_REDIS_PORT: 6379
-      QUEUE_REDIS_PASSWORD: 
+      QUEUE_REDIS_PASSWORD:
 
   postgres:
     image: postgres:14.5
     restart: unless-stopped
     ports:
-      - "5432:5432"
+      - '5432:5432'
     volumes:
       - postgres:/var/lib/postgresql/data
     environment:
@@ -140,7 +112,6 @@ networks:
   mealaway:
     driver: bridge
 
-    
 volumes:
   postgres:
     driver: local
