--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,24 +4,51 @@ services:
   traefik:
     image: traefik:2.6
     restart: always
-    command:
+    command: 
       - --providers.docker
       - --api.insecure
     networks:
       mealaway:
         aliases:
-          - mealaway.test
           - app.mealaway.test
           - api.mealaway.test
     ports:
-      - '80:80'
-      - '8080:8080'
+      - "80:80"
+      - "8080:8080"
     security_opt:
       - no-new-privileges=true
     volumes:
       - ./devstack/traefik:/etc/traefik:ro
       - ./devstack/certificates:/etc/certs:ro
       - /var/run/docker.sock:/var/run/docker.sock:ro
+
+  dashboard:
+    stop_grace_period: '1s'
+    image: node:16-buster
+    working_dir: /app
+    command:
+      - sh
+      - -c
+      - |
+        npm ci
+        npm run dev
+    networks:
+      mealaway:
+        aliases:
+          - dashboard.mealaway.test
+    labels:
+      - "traefik.enable=true"
+      - "traefik.http.routers.dashboard.tls=false"
+      - "traefik.http.routers.dashboard.rule=Host(`dashboard.mealaway.test`)"
+      - "traefik.http.routers.dashboard.entrypoints=http"
+      - "traefik.http.routers.dashboard.service=dashboard"
+      - "traefik.http.services.dashboard.loadbalancer.server.port=5173"
+      - "traefik.docker.network=mealaway"
+    volumes:
+      - ./dashboard:/app
+      - ./devstack/certificates:/etc/certs:ro
+    environment:
+      VITE_API_URL: http://api.mealaway.test/
 
   app:
     stop_grace_period: '1s'
@@ -38,13 +65,13 @@ services:
         aliases:
           - app.mealaway.test
     labels:
-      - 'traefik.enable=true'
-      - 'traefik.http.routers.app.tls=false'
-      - 'traefik.http.routers.app.rule=Host(`app.mealaway.test`)'
-      - 'traefik.http.routers.app.entrypoints=http'
-      - 'traefik.http.routers.app.service=app'
-      - 'traefik.http.services.app.loadbalancer.server.port=5173'
-      - 'traefik.docker.network=mealaway'
+      - "traefik.enable=true"
+      - "traefik.http.routers.app.tls=false"
+      - "traefik.http.routers.app.rule=Host(`app.mealaway.test`)"
+      - "traefik.http.routers.app.entrypoints=http"
+      - "traefik.http.routers.app.service=app"
+      - "traefik.http.services.app.loadbalancer.server.port=5173"
+      - "traefik.docker.network=mealaway"
     volumes:
       - ./app:/app
       - ./devstack/certificates:/etc/certs:ro
@@ -79,7 +106,7 @@ services:
       PORT: 3333
       HOST: 0.0.0.0
       NODE_ENV: development
-      APP_KEY: 5sULHTgtqTOsMfFNQr0_bzga6Mn4waPB
+      APP_KEY: 51p6hxeWWV0G3qqGpVWyhq8ExI4rz8FZ
       DRIVE_DISK: local
       DB_CONNECTION: pg
       PG_HOST: postgres
