--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,10 +8,10 @@ services:
       - --providers.docker
       - --api.insecure
     networks:
-      mealaway:
+      yamyam:
         aliases:
-          - app.mealaway.test
-          - api.mealaway.test
+          - app.yamyam.test
+          - api.yamyam.test
     ports:
       - "80:80"
       - "8080:8080"
@@ -33,22 +33,22 @@ services:
         npm ci
         npm run dev
     networks:
-      mealaway:
+      yamyam:
         aliases:
-          - dashboard.mealaway.test
+          - dashboard.yamyam.test
     labels:
       - "traefik.enable=true"
       - "traefik.http.routers.dashboard.tls=false"
-      - "traefik.http.routers.dashboard.rule=Host(`dashboard.mealaway.test`)"
+      - "traefik.http.routers.dashboard.rule=Host(`dashboard.yamyam.test`)"
       - "traefik.http.routers.dashboard.entrypoints=http"
       - "traefik.http.routers.dashboard.service=dashboard"
       - "traefik.http.services.dashboard.loadbalancer.server.port=5173"
-      - "traefik.docker.network=mealaway"
+      - "traefik.docker.network=yamyam"
     volumes:
       - ./dashboard:/app
       - ./devstack/certificates:/etc/certs:ro
     environment:
-      VITE_API_URL: http://api.mealaway.test/
+      VITE_API_URL: http://api.yamyam.test/
 
   app:
     stop_grace_period: '1s'
@@ -61,22 +61,22 @@ services:
         npm ci
         npm run dev
     networks:
-      mealaway:
+      yamyam:
         aliases:
-          - app.mealaway.test
+          - app.yamyam.test
     labels:
       - "traefik.enable=true"
       - "traefik.http.routers.app.tls=false"
-      - "traefik.http.routers.app.rule=Host(`app.mealaway.test`)"
+      - "traefik.http.routers.app.rule=Host(`app.yamyam.test`)"
       - "traefik.http.routers.app.entrypoints=http"
       - "traefik.http.routers.app.service=app"
       - "traefik.http.services.app.loadbalancer.server.port=5173"
-      - "traefik.docker.network=mealaway"
+      - "traefik.docker.network=yamyam"
     volumes:
       - ./app:/app
       - ./devstack/certificates:/etc/certs:ro
     environment:
-      VITE_API_URL: http://api.mealaway.test/
+      VITE_API_URL: http://api.yamyam.test/
 
   api:
     stop_grace_period: '1s'
@@ -89,17 +89,17 @@ services:
         npm ci
         npm run dev
     networks:
-      mealaway:
+      yamyam:
         aliases:
-          - api.mealaway.test
+          - api.yamyam.test
     labels:
       - 'traefik.enable=true'
       - 'traefik.http.routers.api.tls=false'
-      - 'traefik.http.routers.api.rule=Host(`api.mealaway.test`)'
+      - 'traefik.http.routers.api.rule=Host(`api.yamyam.test`)'
       - 'traefik.http.routers.api.entrypoints=http'
       - 'traefik.http.routers.api.service=api'
       - 'traefik.http.services.api.loadbalancer.server.port=3333'
-      - 'traefik.docker.network=mealaway'
+      - 'traefik.docker.network=yamyam'
     volumes:
       - ./api:/app
     environment:
@@ -111,13 +111,13 @@ services:
       DB_CONNECTION: pg
       PG_HOST: postgres
       PG_PORT: 5432
-      PG_USER: mealaway
-      PG_PASSWORD: mealaway
-      PG_DB_NAME: mealaway
-      API_URL: http://api.mealaway.test/
-      APP_URL: http://app.mealaway.test/
+      PG_USER: yamyam
+      PG_PASSWORD: yamyam
+      PG_DB_NAME: yamyam
+      API_URL: http://api.yamyam.test/
+      APP_URL: http://app.yamyam.test/
       SESSION_DRIVER: cookie
-      ROOT_DOMAIN: mealaway.test
+      ROOT_DOMAIN: yamyam.test
 
   postgres:
     image: postgres:14.5
@@ -127,13 +127,13 @@ services:
     volumes:
       - postgres:/var/lib/postgresql/data
     environment:
-      POSTGRES_PASSWORD: mealaway
-      POSTGRES_USER: mealaway
-      POSTGRES_DB: mealaway
+      POSTGRES_PASSWORD: yamyam
+      POSTGRES_USER: yamyam
+      POSTGRES_DB: yamyam
     networks:
-      - mealaway
+      - yamyam
 networks:
-  mealaway:
+  yamyam:
     driver: bridge
 
 volumes:
