--- a/traefik/traefik.yml
+++ b/traefik/traefik.yml
@@ -16,5 +16,5 @@ providers:
   docker:
     endpoint: unix:///var/run/docker.sock
     exposedByDefault: false
-    network: mealaway
+    network: yamyam
 
