--- a/.github/workflows/deploy-app.yml
+++ b/.github/workflows/deploy-app.yml
@@ -8,9 +8,9 @@ jobs:
     runs-on: ubuntu-latest
     name: Build Vue
     steps:
-    - run: |
-          ls 
-          cd ./app
+    - name: cd
+      run: cd app
+
     - uses: actions/checkout@v2
     - id: Build-Vue
       uses: xRealNeon/VuePagesAction@1.0.1
