--- a/.github/workflows/deploy-app.yml
+++ b/.github/workflows/deploy-app.yml
@@ -8,6 +8,7 @@ jobs:
     runs-on: ubuntu-latest
     name: Build Vue
     steps:
+    - uses: actions/checkout@v2
     - name: cd
       run: cd app
 
