--- a/.github/workflows/deploy-app.yml
+++ b/.github/workflows/deploy-app.yml
@@ -8,15 +8,23 @@ jobs:
     runs-on: ubuntu-latest
     name: Build Vue
     steps:
-    - uses: actions/checkout@v2
+    - uses: actions/checkout@v3
     - name: cd
       run: cd app
 
-    - uses: actions/checkout@v2
-    - id: Build-Vue
-      uses: xRealNeon/VuePagesAction@1.0.1
+    - uses: actions/checkout@v3
+    - uses: actions/setup-node@v3
       with:
-        username: 'Stallos11'
-        reponame: 'YamYam'
-        cname: 'app.vleveque.com'
-        token: ${{ secrets.GITHUB_TOKEN }}
+        node-version: 16
+        cache: 'npm'
+    - run: npm ci
+    - run: npm build
+
+    - name: Push
+      uses: s0/git-publish-subdir-action@develop
+      env:
+        REPO: self
+        BRANCH: gh-pages 
+        FOLDER: ./ 
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }} 
+        MESSAGE: "Build: ({sha}) {msg}"
