--- a/.github/workflows/deploy-app.yml
+++ b/.github/workflows/deploy-app.yml
@@ -8,15 +8,12 @@ jobs:
     runs-on: ubuntu-latest
     name: Build Vue
     steps:
-    - uses: actions/checkout@v3
-    - name: cd
-      run: cd app
-
-    - uses: actions/checkout@v3
-    - uses: actions/setup-node@v3
+    - name: install dependencies
+      uses: actions/setup-node@v3
       with:
         node-version: 16
         cache: 'npm'
+    - run: cd app
     - run: npm ci
     - run: npm build
 
