--- a/.github/workflows/deploy-app.yml
+++ b/.github/workflows/deploy-app.yml
@@ -7,13 +7,16 @@ jobs:
   build_vue:
     runs-on: ubuntu-latest
     name: Build Vue
+    defaults:
+       run:
+         working-directory: ./app/
     steps:
     - name: install dependencies
       uses: actions/setup-node@v3
       with:
+        cache-dependency-path: ./app/package-lock.json
         node-version: 16
         cache: 'npm'
-    - run: cd app
     - run: npm ci
     - run: npm build
 
