--- a/.github/workflows/deploy-app.yml
+++ b/.github/workflows/deploy-app.yml
@@ -4,24 +4,30 @@ on:
     branches:
       - 'main'
 jobs:
-  build_vue:
+  deploy:
     runs-on: ubuntu-latest
-    name: Build Vue
     steps:
-    - name: install dependencies
+    - name: Checkout
+      uses: actions/checkout@v3
+
+    - name: Install node
       uses: actions/setup-node@v3
       with:
-        cache-dependency-path: ./app/package-lock.json
         node-version: 16
-        cache: 'npm'
-    - run: npm ci
-    - run: npm build
+
+    - name: Install dependencies
+      run: npm ci
+      working-directory: app
+
+    - name: Build
+      run: npm run build
+      working-directory: app
+      env:
+        VITE_ENV: production
 
     - name: Push
-      uses: s0/git-publish-subdir-action@develop
-      env:
-        REPO: self
-        BRANCH: gh-pages 
-        FOLDER: ./ 
-        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }} 
-        MESSAGE: "Build: ({sha}) {msg}"
+      run: |
+        git config --global user.name "Stallos11"
+        git config --global user.email "vincentdelev@yahoo.fr"
+        git commit -a -m "CI"
+        git push gh-pages
