--- a/.github/workflows/deploy-app.yml
+++ b/.github/workflows/deploy-app.yml
@@ -26,8 +26,10 @@ jobs:
         VITE_ENV: production
 
     - name: Push
-      run: |
-        git config --global user.name "Stallos11"
-        git config --global user.email "vincentdelev@yahoo.fr"
-        git commit -a -m "CI"
-        git push gh-pages
+      uses: s0/git-publish-subdir-action@develop
+      env:
+        REPO: self
+        BRANCH: gh-pages
+        FOLDER: app
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }} 
+        MESSAGE: "Build: ({sha}) {msg}" 
