--- a/app/tsconfig.node.json
+++ b/app/tsconfig.node.json
@@ -4,7 +4,6 @@
     "module": "ESNext",
     "moduleResolution": "Node",
     "allowSyntheticDefaultImports": true,
-    "types": ["node"] // try
   },
-  // "include": ["vite.config.ts"]
+  "include": ["vite.config.ts"]
 }
