fix: workflow push folder

--- a/.github/workflows/deploy-app.yml
+++ b/.github/workflows/deploy-app.yml
@@ -30,6 +30,6 @@ jobs:
       env:
         REPO: self
         BRANCH: gh-pages
-        FOLDER: dist
+        FOLDER: app/dist
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }} 
         MESSAGE: "Build: ({sha}) {msg}" 
