--- a/app/package.json
+++ b/app/package.json
@@ -10,8 +10,10 @@
   },
   "dependencies": {
     "@axentix/vue": "^0.18.2",
+    "pinia": "^2.0.29",
     "sass": "^1.57.1",
-    "vue": "^3.2.45"
+    "vue": "^3.2.45",
+    "vue-router": "^4.1.6"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^4.0.0",
