--- a/.github/workflows/deploy-app.yml
+++ b/.github/workflows/deploy-app.yml
@@ -25,11 +25,17 @@ jobs:
       env:
         VITE_ENV: production
 
-    - name: Push
-      uses: s0/git-publish-subdir-action@develop
-      env:
-        REPO: self
-        BRANCH: gh-pages
-        FOLDER: app/dist
-        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }} 
-        MESSAGE: "Build: ({sha}) {msg}" 
+    # - name: Push
+    #   uses: s0/git-publish-subdir-action@develop
+    #   env:
+    #     REPO: self
+    #     BRANCH: gh-pages
+    #     FOLDER: app/dist
+    #     GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }} 
+    #     MESSAGE: "Build: ({sha}) {msg}" 
+
+    - name: Deploy docs
+      uses: JamesIves/github-pages-deploy-action@4.1.8
+      with:
+        branch: gh-pages
+        folder: ./dist
