--- a/app/package.json
+++ b/app/package.json
@@ -10,9 +10,14 @@
   },
   "dependencies": {
     "@axentix/vue": "^0.18.2",
-    "pinia": "^2.0.29",
+    "@iconify/vue": "^4.1.0",
+    "axios": "^1.3.1",
+    "pinia": "^2.0.30",
+    "pinia-plugin-persistedstate": "^3.0.2",
     "sass": "^1.57.1",
     "vue": "^3.2.45",
+    "vue-axios": "^3.5.2",
+    "vue-recaptcha": "^2.0.3",
     "vue-router": "^4.1.6"
   },
   "devDependencies": {
