--- a/dashboard/package.json
+++ b/dashboard/package.json
@@ -9,12 +9,26 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "vue": "^3.2.45"
+    "@axentix/vue": "^0.18.2",
+    "@iconify/vue": "^4.1.0",
+    "apexcharts": "^3.36.3",
+    "axios": "^1.3.1",
+    "pinia": "^2.0.30",
+    "pinia-plugin-persistedstate": "^3.0.2",
+    "sass": "^1.57.1",
+    "vue": "^3.2.45",
+    "vue-axios": "^3.5.2",
+    "vue-recaptcha": "^2.0.3",
+    "vue-router": "^4.1.6",
+    "vue3-apexcharts": "^1.4.1",
+    "vue3-easy-data-table": "^1.5.30"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^4.0.0",
     "typescript": "^4.9.3",
     "vite": "^4.0.0",
-    "vue-tsc": "^1.0.11"
+    "vite-plugin-pwa": "^0.14.1",
+    "vue-tsc": "^1.0.11",
+    "workbox-precaching": "^6.5.4"
   }
 }
