--- a/app/package.json
+++ b/app/package.json
@@ -12,6 +12,7 @@
     "@axentix/vue": "^0.18.2",
     "@iconify/vue": "^4.1.0",
     "axios": "^1.3.1",
+    "ping.js": "^0.3.0",
     "pinia": "^2.0.30",
     "pinia-plugin-persistedstate": "^3.0.2",
     "sass": "^1.57.1",
