--- a/api/package.json
+++ b/api/package.json
@@ -22,6 +22,7 @@
     "@adonisjs/core": "^5.8.8",
     "@adonisjs/lucid": "^18.2.0",
     "@adonisjs/repl": "^3.1.11",
+    "adonis5-swagger": "^1.4.1",
     "luxon": "^3.1.0",
     "pg": "^8.8.0",
     "phc-argon2": "^1.1.3",
