--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,10 +1,10 @@
-version: '3.8'
+version: "3.8"
 
 services:
   traefik:
     image: traefik:2.6
     restart: always
-    command: 
+    command:
       - --providers.docker
       - --api.insecure
     networks:
@@ -23,7 +23,7 @@ services:
       - /var/run/docker.sock:/var/run/docker.sock:ro
 
   dashboard:
-    stop_grace_period: '1s'
+    stop_grace_period: "1s"
     image: node:16-buster
     working_dir: /app
     command:
@@ -51,7 +51,7 @@ services:
       VITE_API_URL: http://api.yamyam.test/
 
   app:
-    stop_grace_period: '1s'
+    stop_grace_period: "1s"
     image: node:16-buster
     working_dir: /app
     command:
@@ -77,10 +77,10 @@ services:
       - ./devstack/certificates:/etc/certs:ro
     environment:
       VITE_API_URL: http://api.yamyam.test/
+      VITE_DASHBOARD_URL: http://dashboard.yamyam.test/
       VITE_RECAPTCHA_KEY: 6LcggW0kAAAAAIBPh7SXqoEofNWpSmibvJIfHEoh
-
   api:
-    stop_grace_period: '1s'
+    stop_grace_period: "1s"
     image: node:16-buster
     working_dir: /app
     command:
@@ -94,13 +94,13 @@ services:
         aliases:
           - api.yamyam.test
     labels:
-      - 'traefik.enable=true'
-      - 'traefik.http.routers.api.tls=false'
-      - 'traefik.http.routers.api.rule=Host(`api.yamyam.test`)'
-      - 'traefik.http.routers.api.entrypoints=http'
-      - 'traefik.http.routers.api.service=api'
-      - 'traefik.http.services.api.loadbalancer.server.port=3333'
-      - 'traefik.docker.network=yamyam'
+      - "traefik.enable=true"
+      - "traefik.http.routers.api.tls=false"
+      - "traefik.http.routers.api.rule=Host(`api.yamyam.test`)"
+      - "traefik.http.routers.api.entrypoints=http"
+      - "traefik.http.routers.api.service=api"
+      - "traefik.http.services.api.loadbalancer.server.port=3333"
+      - "traefik.docker.network=yamyam"
     volumes:
       - ./api:/app
     environment:
@@ -117,6 +117,7 @@ services:
       PG_DB_NAME: yamyam
       API_URL: http://api.yamyam.test/
       APP_URL: http://app.yamyam.test/
+      DASHBOARD_URL: http://app.yamyam.test/
       SESSION_DRIVER: cookie
       ROOT_DOMAIN: yamyam.test
 
@@ -124,7 +125,7 @@ services:
     image: postgres:14.5
     restart: unless-stopped
     ports:
-      - '5432:5432'
+      - "5432:5432"
     volumes:
       - postgres:/var/lib/postgresql/data
     environment:
