--- a/dashboard/package.json
+++ b/dashboard/package.json
@@ -21,7 +21,9 @@
     "vue-recaptcha": "^2.0.3",
     "vue-router": "^4.1.6",
     "vue3-apexcharts": "^1.4.1",
-    "vue3-easy-data-table": "^1.5.30"
+    "vue3-easy-data-table": "^1.5.30",
+    "vue3-star-ratings": "^1.1.0",
+    "vue3-timepicker": "^1.0.0-beta.2"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^4.0.0",
