--- a/.github/workflows/deploy-app.yml
+++ b/.github/workflows/deploy-app.yml
@@ -5,15 +5,13 @@ on:
       - 'main'
 jobs:
   deploy:
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-22.04
+    container: 
+      image: node:16-alpine
+
     steps:
     - name: Checkout
       uses: actions/checkout@v3
-
-    - name: Install node
-      uses: actions/setup-node@v3
-      with:
-        node-version: 16
 
     - name: Install dependencies
       run: npm ci
@@ -25,15 +23,6 @@ jobs:
       env:
         VITE_ENV: production
         VITE_RECAPTCHA_KEY: 6LcggW0kAAAAAIBPh7SXqoEofNWpSmibvJIfHEoh
-
-    # - name: Push
-    #   uses: s0/git-publish-subdir-action@develop
-    #   env:
-    #     REPO: self
-    #     BRANCH: gh-pages
-    #     FOLDER: app/dist
-    #     GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }} 
-    #     MESSAGE: "Build: ({sha}) {msg}" 
 
     - name: Deploy docs
       uses: JamesIves/github-pages-deploy-action@4.1.8
