--- a/.github/workflows/deploy-app.yml
+++ b/.github/workflows/deploy-app.yml
@@ -6,12 +6,15 @@ on:
 jobs:
   deploy:
     runs-on: ubuntu-22.04
-    container: 
-      image: node:16-alpine
 
     steps:
     - name: Checkout
       uses: actions/checkout@v3
+
+    - name: Install node
+      uses: actions/setup-node@v3
+      with:
+        node-version: 16
 
     - name: Install dependencies
       run: npm ci
