--- a/.github/workflows/deploy-app.yml
+++ b/.github/workflows/deploy-app.yml
@@ -7,7 +7,7 @@ jobs:
   deploy:
     runs-on: ubuntu-22.04
     container: 
-      image: node:16-alpine
+      image: node:16-bullseye
 
     steps:
     - name: Checkout
