--- a/app/package.json
+++ b/app/package.json
@@ -19,7 +19,8 @@
     "vue": "^3.2.45",
     "vue-axios": "^3.5.2",
     "vue-recaptcha": "^2.0.3",
-    "vue-router": "^4.1.6"
+    "vue-router": "^4.1.6",
+    "vue3-easy-data-table": "^1.5.42"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^4.0.0",
