--- a/api/package.json
+++ b/api/package.json
@@ -24,6 +24,7 @@
     "@adonisjs/core": "^5.8.8",
     "@adonisjs/lucid": "^18.2.0",
     "@adonisjs/repl": "^3.1.11",
+    "@adonisjs/session": "^6.4.0",
     "adonis5-swagger": "^1.4.1",
     "luxon": "^3.1.0",
     "pg": "^8.8.0",
