--- a/api/tsconfig.json
+++ b/api/tsconfig.json
@@ -11,6 +11,7 @@
     "experimentalDecorators": true,
     "emitDecoratorMetadata": true,
     "resolveJsonModule": true,
+    "esModuleInterop": true,
     "outDir": "build",
     "rootDir": "./",
     "sourceMap": true,
