--- a/api/.env.example
+++ b/api/.env.example
@@ -4,9 +4,9 @@ NODE_ENV=development
 APP_KEY=51p6hxeWWV0G3qqGpVWyhq8ExI4rz8FZ
 DRIVE_DISK=local
 DB_CONNECTION=pg
-PG_HOST=localhost
-PG_PORT=5432
-PG_USER=lucid
-PG_PASSWORD=
-PG_DB_NAME=lucid
 SESSION_DRIVER=cookie
+MYSQL_HOST=localhost
+MYSQL_PORT=3306
+MYSQL_USER=lucid
+MYSQL_PASSWORD=
+MYSQL_DB_NAME=lucid
