--- a/api/package.json
+++ b/api/package.json
@@ -27,7 +27,7 @@
     "@adonisjs/session": "^6.4.0",
     "adonis5-swagger": "^1.4.1",
     "luxon": "^3.1.0",
-    "pg": "^8.8.0",
+    "mysql2": "^3.6.1",
     "phc-argon2": "^1.1.3",
     "phc-bcrypt": "^1.0.7",
     "proxy-addr": "^2.0.7",
