--- a/app/package.json
+++ b/app/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "dev": "vite --host",
     "build": "vue-tsc --noEmit && vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "test": "vitest"
   },
   "dependencies": {
     "@axentix/vue": "^0.18.2",
@@ -28,6 +29,7 @@
     "typescript": "^4.9.3",
     "vite": "^4.0.0",
     "vite-plugin-pwa": "^0.14.1",
+    "vitest": "^0.34.4",
     "vue-tsc": "^1.0.11",
     "workbox-precaching": "^6.5.4"
   }
