--- a/.github/workflows/deploy-app.yml
+++ b/.github/workflows/deploy-app.yml
@@ -34,7 +34,7 @@ jobs:
       run: |
         apt-get update && apt-get install -y rsync
 
-    - name: Deploy docs
+    - name: Deploy app
       uses: JamesIves/github-pages-deploy-action@v4
       with:
         branch: gh-pages
